# gpu-ocean

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  INSTALL  Introduction.ipynb  README.md  TestCasesDemosInfo.ipynb  conda_dapaper_versions.yml  conda_environment.yml  conda_environment_paropen.yml  gitFilterIpynbAll.py  gitFilterIpynbAnimations.py  gitFilterIpynbAnimationsInstall.py  gpu_ocean_saga_test.job  gpu_ocean_sir.job  gpu_ocean_test.job  numerical_scheme_sandbox.ipynb
Docu/: BestPractice.md  Installation.md
SWESimulators/: BaseDrifterEnsemble.py  BathymetryAndICs.py  CTCS.py  DataAssimilationUtils.py  FBL.py  IPythonMagic.py  OceanNoiseEnsemble.py  OceanStateNoise.py  PlotHelper.py  RecursiveCDKLM16.py  SimReader.py  Simulator.py  WindStress.py  __init__.py
SWESimulators/gpu_kernels/: CTCS_V_kernel.cu  CTCS_boundary.cu  CTCS_boundary_EW.cu  FBL_U_kernel.cu  FBL_V_kernel.cu  FBL_periodic_boundary.cu  Interpolation.cu  KP07_kernel.cu  common.cu  iewpf_kernels.cu  observationKernels.cu  reductions.cu
UMLdiagrams/: classes.wsd
apps/: CMakeLists.txt
apps/mockup/src/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  programoptions.cpp  programoptions.h  simulator.cpp  simulator.h
apps/src/: gpu-eps-hav-2.cfg  gpu-eps-hav.cfg  main.cpp  testmain.cpp
apps/test/: manager_test.cpp  netcdfio_test.cpp
apps/test/utils/: testutils.cpp  testutils.h
cmake/Modules/: FindNetCDF.cmake  FindOpenCL.cmake
doc/paper/: CDKLM16-cancellations.tex  referencesHHH.bib
doc/reference_python/: 2LayerTest.ipynb  BenchmarkCases.ipynb  CDKLM_Example5.ipynb  CompareSchemes1D.ipynb  CompareSchemes2D.ipynb  ConvergenceShock1D.ipynb  ConvergenceSmooth.ipynb  ConvergenceSmooth1D.ipynb  ConvergenceSmooth2D.ipynb  Coriolis.ipynb  DriftTest.ipynb  GeostrophicBalance.ipynb  PerformanceTest.ipynb  Reproductions.ipynb  RossbyAdjustmentTest_OneLayer_CTCS.ipynb  VaryingWaterDepth.ipynb  boundaryTest.ipynb  ctcs_1a.nc  ctcs_3a.nc  fbl_ctcs_stencils.pptx  gothenflow.ipynb  knownIssues.ipynb  swashes_1_nx=1024.csv  swashes_1_nx=256.csv  swashes_1_nx=64.csv
gpu_ocean/: profiling.py  requirements.txt  windStress_params.h
gpu_ocean/SWESimulators/: BaseDrifterCollection.py  BaseDrifterEnsemble.py  BaseOceanStateEnsemble.py  BathymetryAndICs.py  CDKLM16.py  CPUDrifterCollection.py  CPUDrifterEnsemble.py  CTCS.py  CTCS2Layer.py  Common.py  DataAssimilationUtils.py  DoubleJetCase.py  DoubleJetEnsemble.py  DoubleJetExperimentUtils.py  DrifterEnsemble.py  ETKFOcean.py  EnKFOcean.py  EnsembleFromFiles.py  EnsemblePlot.py  FBL.py  GPUDrifterCollection.py  IEWPFOcean.py  IPythonMagic.py  KP07.py  MPIOceanModelEnsemble.py  NetCDFInitialization.py  Observation.py  OceanModelEnsemble.py  OceanNoiseEnsemble.py  OceanStateNoise.py  (+10 more)
mgr/: CMakeLists.txt
mgr/src/: config.h.in  field.cpp  field.h  initconditions.cpp  initconditions.h  manager.cpp  manager.h  netcdfreader.cpp  netcdfreader.h  netcdfwriter.cpp  netcdfwriter.h  oclutils.cpp  oclutils.h  programoptions.cpp  programoptions.h
notebooks/: CaseA_LakeAtRest.ipynb  CaseA_SwashesDambreak.ipynb  CaseB_RossbyAdjustment.ipynb  CaseC_VariableRossbyRadius.ipynb  CaseC_VariableRossbyRadius_Plotting.ipynb  CaseD_Kelvin.ipynb  CaseE_F_RossbyWaves_Plotting.ipynb  CaseE_PlanetaryRossbyWaves.ipynb  CaseF_TopographicRossbyWaves.ipynb  NumericalOrder.ipynb  Performance_Simulation.ipynb
python/: 2LayerTest.ipynb  BasicParticleFilter.ipynb  BenchmarkSchemes2D.ipynb  BlockSizeExperiment.ipynb  CDKLM_Example5.ipynb  Case1_Rossby_adjustment.ipynb  Case2_beta_effect.ipynb  Case3_topographic_adjustment.ipynb  Case4_realistic_bottom.ipynb  CaseA_LakeAtRest.ipynb  CaseA_SwashesDambreak.ipynb  CaseB_RossbyAdjustment.ipynb  CaseB_RossbyAdjustment_Plotting.ipynb  CaseC_VariableRossbyRadius.ipynb  CaseC_VariableRossbyRadius_Plotting.ipynb  CaseD_E_RossbyWaves_Plotting.ipynb  CaseD_PlanetaryRossbyWaves.ipynb  CaseE_TopographicRossbyWaves.ipynb  CompareSchemes1D.ipynb  CompareSchemes2D.ipynb  ComputationalEfficiency.ipynb  ComputationalEfficiencyPostProc.ipynb  DomainSizeExperiment.ipynb  Doxyfile  FigureMaker.ipynb  FlowRelaxationTests.ipynb  GeoBalanceFigureMaker.ipynb  GeostrophicBalance.ipynb  GeostrophicBalanceHavardParams.ipynb  GeostrophicBalanceKaiParams.ipynb  Hotstart.ipynb  ImplicitEqualWeightsParticleFilter.ipynb  LakeAtRest.ipynb  LinearCoriolis.ipynb  MultiDrifter_tests.ipynb  NetCDF.ipynb  NumericalOrder.ipynb  NumericalSpongeTests.ipynb  OceanModel_BasicParticleFilter.ipynb  OceanModel_SEnKF.ipynb  (+26 more)
sim/: .gitignore  CMakeLists.txt
sim/src/: computeEta.cl  computeEta_types.h  computeU.cl  computeU_types.h  computeV.cl  computeV_types.h  config.h  config.h.in  dummysim.cpp  dummysim.h  matmul_noop.cl  matmulcl.cpp  matmulcl.h  mockup_sim.cpp  mockup_sim.h  oclutils.cpp  oclutils.h  profile.h  reconstructH.cl  reconstructH_types.h  simbase.cpp  simbase.h  simulator.cpp  simulator.h  testsim.cpp  testsim.h  windStress_types.h
sim/src/kernels/: CDKLM16_double_kernel.opencl  CDKLM16_kernel.cu  CDKLM16_kernel.opencl  CTCS2Layer_U_kernel.opencl  CTCS_U_kernel.cu  CTCS_U_kernel.opencl  CTCS_V_kernel.cu  CTCS_V_kernel.opencl  CTCS_boundary.cu  CTCS_boundary.opencl  CTCS_boundary_EW.opencl  CTCS_boundary_NS.opencl  CTCS_eta_kernel.cu  CTCS_eta_kernel.opencl  CTCS_step_kernel.opencl  FBL_U_kernel.cu  FBL_U_kernel.opencl  FBL_V_kernel.cu  FBL_V_kernel.opencl  FBL_eta_kernel.cu  FBL_eta_kernel.opencl  FBL_periodic_boundary.cu  FBL_periodic_boundary.opencl  FBL_step_kernel.opencl  Interpolation.cu  KP07_kernel.cu  KP07_kernel.opencl  LxF_kernel.opencl  RungeKutta.opencl  boundary_kernels.cu  boundary_kernels.opencl  common.cu  common.opencl  computeEta.cl  computeU.cl  computeV.cl  driftKernels.cu  driftKernels.opencl  initBm_kernel.cu  initBm_kernel.opencl  (+6 more)
sim/src/kernels/cl-kernels/: CDKLM16_double_kernel.opencl  CTCS2Layer_V_kernel.opencl  CTCS2Layer_eta_kernel.opencl  CTCS_V_kernel.opencl  CTCS_eta_kernel.opencl  FBL_U_kernel.opencl  driftKernels.opencl  initBm_kernel.opencl
tests/: oneLayer_2D_tests.py  particle_filter_tests.py  random_numbers.py
(+784 files in other folders)
